next commit update
update oct 18

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -60,35 +60,35 @@
       </div>
 
       <div class='container num2'>
-        <a href='#'>0</a>
+        <a href='./projects/2018/nike-mockup-10-18-18/index.html'>nike mockup #1</a>
       </div>
 
       <div class='container num3'>
-        <a href='#'>0</a>
+        <a href='./projects/2018/mockup-2-10-18-18/index.html'>apple mockup #2</a>
       </div>
 
       <div class='container num1'>
-        <a href='./projects/2017/site-1/index.html'>0</a>
+        <a href='./projects/2018/codepen-slate-10-15-18/index.html'>Pencil Slate</a>
       </div>
 
       <div class='container num2'>
-        <a href='./projects/2017/site-node/index.html'>0</a>
+        <a href=''>0</a>
       </div>
 
       <div class='container num3'>
-        <a href='./projects/2017/searchbar/index.html'>0</a>
+        <a href=''>0</a>
       </div>
 
       <div class='container num1'>
-        <a href='./projects/2017/math/math.html'>0</a>
+        <a href=''>0</a>
       </div>
 
       <div class='container num2'>
-        <a href='./projects/2017/wixpage/index.html'>0</a>
+        <a href=''>0</a>
       </div>
 
       <div class='container num3'>
-        <a href='./projects/2018/site_replica-10-08-18/index.html'>0</a>
+        <a href='.'>0</a>
       </div>
 
 
