--- a/public_html/index.html
+++ b/public_html/index.html
@@ -4,8 +4,10 @@
 <head>
   <link rel='StyleSheet' href='css.css' />
   <meta charset='utf-8'>
-  <title>Layout image not really working
+  <title>Does work now.
   </title>
+  <link rel='icon' href='something.ico'>
+  <meta name='description' content='I am happy'>
 </head>
 
 <body>
@@ -90,7 +92,6 @@
       <div class='container num3'>
         <a href='.'>0</a>
       </div>
-
 
 </div><!--container for divs -->
     <!--slide con-->
