--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@
 <head>
   <link rel='StyleSheet' href='css.css' />
   <meta charset='utf-8'>
-  <title>Layout image not really working
+  <title>CS 160 yay!!!
   </title>
 </head>
 
@@ -13,81 +13,51 @@
   <div class='image'>
 
     <div class='about'>
-      <h1>GRANT MITCHELL</h1>
-      <h2>CIS 195 Web-Development 1</h2>
+<div class='image-2'>
+
+      <p style='text-align:center; font-size:25px; color:white;'>
+        Hi. I would like to go to osu-cascades to finish computer science and business courses.However if I could afford Mit, I would gladly go down there to work on some hard computer science courses.
+      </p>
+<a href='des.htm' style='display:flex; justify-content: center;text-align:center; width:100%' >course descriptions</a>
       <ul>
-        <li>I like to code </li>
-        <li>I like to go to the beach !important </li>
-        <li>I like to create new things on the web with code </li>
+
+<li><a style='color:red; font-size:25px;' href='https://osucascades.edu/computer-science/current-students/computer-science-courses'>osu-cascades</a></li>
+<li><a style='color:red; font-size:25px;' href='https://talk.collegeconfidential.com/university-california-berkeley/219320-hows-the-courseload-for-the-computer-science-major.html
+'>Course load OSU</a></li>
+<li><a style='color:red; font-size:25px;' href='https://ocw.mit.edu/courses/electrical-engineering-and-computer-science/'>Mit Computer Science</a></li>
+<li><a style='color:red; font-size:25px;' href='http://catalog.mit.edu/degree-charts/computer-science-engineering-course-6-3/'>Mit course load</a></li>
+
       </ul>
 
-      <p>
-        I am 18 years old. This is my first year of college. I am very scared, but at the same time very happy, but I am also confused, but I think Im okay. I have been coding for two years 5 hours a day. I concider my self a web developer that knows angular,
-        and is learning react. There are no monsters under my bed, but there could be.
-      </p>
+      </div>
+
     </div>
 
     <div class='sliders' >
 <div class='container-divs'>
       <div class='container num1'>
-        <a href='./projects/2017/site-1/index.html'>site-1 2017</a>
+        <a href='https://scratch.mit.edu/projects/255799849/'>scratch #1</a>
       </div>
 
       <div class='container num2'>
-        <a href='./projects/2017/site-node/index.html'>node-server 2017</a>
+        <a href='https://scratch.mit.edu/projects/249960251/'>scratch #2</a>
       </div>
 
       <div class='container num3'>
-        <a href='./projects/2017/searchbar/index.html'>searchbar 2017</a>
+        <a href='./cs/python.py'>python</a>
       </div>
 
-      <div class='container num1'>
-        <a href='./projects/2017/math/math.html'>math 2017</a>
-      </div>
+<div class='container num1'>
+  <a href='#'></a>
+</div>
 
-      <div class='container num2'>
-        <a href='./projects/2017/wixpage/index.html'>wixpage 2017</a>
-      </div>
+<div class='container num2'>
+  <a href='#'></a>
+</div>
 
-      <div class='container num3'>
-        <a href='./projects/2018/site_replica-10-08-18/index.html'>Replica page 2018</a>
-      </div>
-
-      <div class='container num1'>
-        <a href='#'>0</a>
-      </div>
-
-      <div class='container num2'>
-        <a href='#'>0</a>
-      </div>
-
-      <div class='container num3'>
-        <a href='#'>0</a>
-      </div>
-
-      <div class='container num1'>
-        <a href='./projects/2017/site-1/index.html'>site-1 2017</a>
-      </div>
-
-      <div class='container num2'>
-        <a href='./projects/2017/site-node/index.html'>node-server 2017</a>
-      </div>
-
-      <div class='container num3'>
-        <a href='./projects/2017/searchbar/index.html'>searchbar 2017</a>
-      </div>
-
-      <div class='container num1'>
-        <a href='./projects/2017/math/math.html'>math 2017</a>
-      </div>
-
-      <div class='container num2'>
-        <a href='./projects/2017/wixpage/index.html'>wixpage 2017</a>
-      </div>
-
-      <div class='container num3'>
-        <a href='./projects/2018/site_replica-10-08-18/index.html'>Replica page 2018</a>
-      </div>
+<div class='container num3'>
+  <a href='#'></a>
+</div>
 
 
 </div><!--container for divs -->
