--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 
 <head>
-  <link rel='StyleSheet' href='css.css' />
+  <link rel='StyleSheet' href='css.css'/>
   <meta charset='utf-8'>
   <title>Does work now.
   </title>
@@ -74,11 +74,11 @@
       </div>
 
       <div class='container num2'>
-        <a href=''>0</a>
+        <a href='./projects/2018/articles-10-22-18/index.html'>Articles </a>
       </div>
 
       <div class='container num3'>
-        <a href=''>0</a>
+        <a href='./projects/2018/images-10-25-18/index.html'>images 10-25-18 </a>
       </div>
 
       <div class='container num1'>
