--- a/projects/index.html
+++ b/projects/index.html
@@ -16,9 +16,9 @@
 <div class='image-2'>
 
       <p style='text-align:center; font-size:25px; color:white;'>
-        Hi. I would like to go to osu-cascades to finish computer science and business courses.However if I could afford Mit, I would gladly go down there to work on some hard computer science courses.
+        Hi. I would like to go to osu-cascades to finish computer science and business courses.
       </p>
-<a href='des.htm' style='display:flex; justify-content: center;text-align:center; width:100%' >course descriptions</a>
+<a target='_blank' class='not' href='https://docs.google.com/document/d/1bw7v9anoAvfaM5U1OxQCv_DglZnF98phn3v-tfE3Hb4/edit?usp=sharing' style='display:flex; justify-content: center;text-align:center; width:100%' >College Degrees</a>
       <ul>
 
 <li><a style='color:red; font-size:25px;' href='https://osucascades.edu/computer-science/current-students/computer-science-courses'>osu-cascades</a></li>
@@ -44,20 +44,33 @@
       </div>
 
       <div class='container num3'>
-        <a href='./cs/python.py'>python</a>
+        <a href='./cs/python/python.py'>python #1</a>
       </div>
 
 <div class='container num1'>
-  <a href='#'></a>
+  <a href='https://docs.google.com/document/d/1n3Q9wnSQ6zxAlKHE1a62zou4TrGTNjAk7WUz0Uv_Vw4/edit'>Dreaming In Code Answ</a>
 </div>
 
 <div class='container num2'>
-  <a href='#'></a>
+  <a href='https://docs.google.com/document/d/1I1pAV7_6QNYgSg3ILGlGg-4pGMJjvh8Tr5K8zpGk2dE/edit'>CODE Answ</a>
 </div>
 
 <div class='container num3'>
-  <a href='#'></a>
+  <a href='https://codehs.com/student/878575'>Code Hs quick link</a>
 </div>
+
+<div class='container num1'>
+  <a href='http://www.screencast.com/t/Je4KC0YxDy'>Video of app Inventor</a>
+</div>
+
+<div class='container num2'>
+  <a href='./pic.png'>picture of code hs</a>
+</div>
+
+<div class='container num3'>
+  <a href='#'>0</a>
+</div>
+
 
 
 </div><!--container for divs -->
