--- a/public_html/index.html
+++ b/public_html/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <div class='container num1'>
-        <a href=''>0</a>
+        <a href='./projects/2018/photo-gal-10-29-18/photostory.html'>photo-gal 10-29-18</a>
       </div>
 
       <div class='container num2'>
