--- a/cs-160/index.html
+++ b/cs-160/index.html
@@ -68,9 +68,20 @@
 </div>
 
 <div class='container num3'>
-  <a href='#'>0</a>
+  <a href='./cs/python/rockp.py'>rock paper scissors python :error</a>
 </div>
 
+<div class='container num1'>
+  <a href='./cs/python/masterM.py'>Master mind python :error</a>
+</div>
+
+<div class='container num2'>
+  <a href='./cs/p_js/p5-1/empty-example/index.html'>p5.js num1</a>
+</div>
+
+<div class='container num3'>
+  <a href='./cs/p_js/p5-2/empty-example/index.html'>p5.js num2</a>
+</div>
 
 
 </div><!--container for divs -->
