--- a/cs-160/index.html
+++ b/cs-160/index.html
@@ -84,6 +84,11 @@
 </div>
 
 
+<div class='container num1'>
+  <a href='https://docs.google.com/document/d/1F2Zhjkpw872oL8pu57u7QcS9Jf1MADQIgahgJNmpo0Y/edit'>Master mind python :error</a>
+</div>
+
+
 </div><!--container for divs -->
     <!--slide con-->
 </div>
