--- a/cs-160/index.html
+++ b/cs-160/index.html
@@ -85,7 +85,7 @@
 
 
 <div class='container num1'>
-  <a href='https://docs.google.com/document/d/1F2Zhjkpw872oL8pu57u7QcS9Jf1MADQIgahgJNmpo0Y/edit'>Master mind python :error</a>
+  <a href='https://docs.google.com/document/d/1F2Zhjkpw872oL8pu57u7QcS9Jf1MADQIgahgJNmpo0Y/edit'>rubric 2018 </a>
 </div>
 
 
