--- a/cs-160/index.html
+++ b/cs-160/index.html
@@ -85,9 +85,40 @@
 
 
 <div class='container num1'>
-  <a href='https://docs.google.com/document/d/1F2Zhjkpw872oL8pu57u7QcS9Jf1MADQIgahgJNmpo0Y/edit'>rubric 2018 </a>
+  <a href='https://docs.google.com/document/d/1DZkBQmv90OaVDZ0bvI7C0sIWZLPeWKqeeftNMnjlA7E/edit'>rubric 2018</a>
 </div>
 
+<div class='container num2'>
+  <a href='./cs/python'>python</a>
+</div>
+
+<div class='container num3'>
+  <a href='./cs/swift'>swift</a>
+</div>
+
+<div class='container num1'>
+  <a href='./cs/python/hangman.py'>hangman python</a>
+</div>
+
+<div class='container num2'>
+  <a href='./cs/python/remainder.py'>remainder python</a>
+</div>
+
+<div class='container num3'>
+  <a href='./cs/swift'>swift</a>
+</div>
+
+<div class='container num1'>
+  <a href='./cs/ruby'>ruby</a>
+</div>
+
+<div class='container num2'>
+  <a href='./cs/ios-beginners'>ios</a>
+</div>
+
+<div class='container num3'>
+  <a href='./cs/Perl'>perl</a>
+</div>
 
 </div><!--container for divs -->
     <!--slide con-->
