--- a/cs-160/index.html
+++ b/cs-160/index.html
@@ -44,7 +44,7 @@
       </div>
 
       <div class='container num3'>
-        <a href='./cs/python/python.py'>python #1</a>
+        <a href='./cs/python/'>python</a>
       </div>
 
 <div class='container num1'>
@@ -60,7 +60,7 @@
 </div>
 
 <div class='container num1'>
-  <a href='http://www.screencast.com/t/Je4KC0YxDy'>Video of app Inventor</a>
+  <a href='./program1.mov'>Video of app Inventor</a>
 </div>
 
 <div class='container num2'>
@@ -68,21 +68,8 @@
 </div>
 
 <div class='container num3'>
-  <a href='./cs/python/rockp.py'>rock paper scissors python :error</a>
+  <a href='./cs/p_js/'>p5.js</a>
 </div>
-
-<div class='container num1'>
-  <a href='./cs/python/masterM.py'>Master mind python :error</a>
-</div>
-
-<div class='container num2'>
-  <a href='./cs/p_js/p5-1/empty-example/index.html'>p5.js num1</a>
-</div>
-
-<div class='container num3'>
-  <a href='./cs/p_js/p5-2/empty-example/index.html'>p5.js num2</a>
-</div>
-
 
 <div class='container num1'>
   <a href='https://docs.google.com/document/d/1DZkBQmv90OaVDZ0bvI7C0sIWZLPeWKqeeftNMnjlA7E/edit'>rubric 2018</a>
@@ -90,18 +77,6 @@
 
 <div class='container num2'>
   <a href='./cs/python'>python</a>
-</div>
-
-<div class='container num3'>
-  <a href='./cs/swift'>swift</a>
-</div>
-
-<div class='container num1'>
-  <a href='./cs/python/hangman.py'>hangman python</a>
-</div>
-
-<div class='container num2'>
-  <a href='./cs/python/remainder.py'>remainder python</a>
 </div>
 
 <div class='container num3'>
@@ -118,6 +93,14 @@
 
 <div class='container num3'>
   <a href='./cs/Perl'>perl</a>
+</div>
+
+<div class='container num1'>
+  <a href='./cs/server-node'>Server Node js >to run node server.js download Node js</a>
+</div>
+
+<div class='container num2'>
+  <a href='https://docs.google.com/document/d/1DbHbMoJJyAkorWeS3DZUZiPWzCIkQTRg1eN6gr4lDig/edit'>final paper</a>
 </div>
 
 </div><!--container for divs -->
