--- a/cs-160/index.html
+++ b/cs-160/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <link rel='StyleSheet' href='css.css' />
+    <link rel='StyleSheet' href='http://htmlpreview.github.io/?https://github.com/grant350/grant350.github.io/blob/master/cs-160/css.css' />
+
   <meta charset='utf-8'>
   <title>CS 160 yay!!!
   </title>
